1.9.9
Added VSK/GPD parameterisation

1.9.4
Debugged
.First.lib removed 
stderr references removed

1.9.3
Debug plotgld() for pathological densities

1.9.2
NAMESPACE added

1.9.1
Bugfix: plotgld was wrongly labelling some densities [such as
c(0,1,4,5),param="rs"] as pathological, which should be restricted to those
like c(0, 1, 0.03, 0.7), param = "rs".
Bugfix to plot.starship code and documentation

1.9
Provided qdgl() as a duplicate of dqgl() because these are actually the quantile density functions, not the density quantile functions
Allowed for the FKML parameterisation to be referred to as either FKML or FMKL to allow for the different uses in the literature.
Added a plot method for the starship class.  This compares the fitted gld to the data.
Added add argument to plotgld() and plotglc()

1.8.5
Added QQ plot to compare two sets of parameter values

1.8.4
Added "starship" class, with methods for print() and summary()
Documentation fixes

1.8.3
Fixed bug stopping functions working if the parameter values are extracted from a dataframe
Added ability to set inverse.eps in starship() - default is still 1e-08
really fixed dots.end bug in plotgld

1.8.2
Fixed dots.end bug in plotgld
Changed exit() to error() in C code

1.8.1
plotgl warning (1.8 change) bugfix
Removed the infinite parameter values check

1.8
plotgl warns about pathological densities and plots slightly differently 
where the theoretical (finite) minimum is actually a long way 
from Q(.Machine$double.eps) or similar with the maximum
Bugfix: DOS CR characters in R file causing problem on alpha

1.7.2
Bugfix: no visible binding for param in .qdgl.fmkl and friends

1.7.1
Bugfixes: initgrid default value for RS parameterisation
Documentation fix starship

1.7
Added support for the 5 parameter FMKL version (FM5 parameterisation)
Changed syntax for starship.adaptivegrid
Allowed parameters to be given as a vector, rather than with individual 
arguments