@@ -1,10 +1,7 @@
-fix 
-gld.fmkl.fx.c:102: warning: implicit declaration of function `exit'
+RS parameterisation l3=0 or l4=0 limit results
 
 Check if the sorting in pgl() is worth the computational cost
 
-starship for GPD parameterisation
-
-documentation for GPD parameterisation
-
 ? support named elements of the vector for parameters ?
+
+Better handling of initgrid in starship
