@@ -1,5 +1,10 @@
 1.9.9
-Added VSK/GPD parameterisation
+Added VSK/GPD parameterisation (all basic functions and starship)
+Removed default values of initgrid in starship.adaptivegrid() - users now need
+to specify an initial grid if using this function.  starship() still provides
+the same default when starship.adaptivegrid is called.
+C error message improvements
+Changes to the way the default initgrid is used in the starship function
 
 1.9.4
 Debugged
